chore: willboosterify ignore files

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,11 +5,13 @@
 
 test-fixtures/
 3rd-party/
+*.min.js
 
 dist.zip
 
 .devcontainer/
 dist/
+inter/
 temp/
 
 # Created by https://www.gitignore.io/api/windows,macos,linux,jetbrains,visualstudiocode,emacs,vim,node
@@ -273,8 +275,16 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# react / gatsby 
-# public/
+# rollup.js default build output
+
+# Uncomment the public line if your project uses Gatsby
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# https://create-react-app.dev/docs/using-the-public-folder/#docsNav
+# public
+
+# Storybook build outputs
+.out
+.storybook-out
 
 # vuepress build output
 .vuepress/dist
@@ -287,6 +297,10 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+# Temporary folders
+tmp/
+temp/
 
 ### Vim ###
 # Swap
@@ -302,10 +316,15 @@ Sessionx.vim
 
 # Temporary
 .netrwhist
+
 # Auto-generated tag files
 tags
+
 # Persistent undo
 [._]*.un~
+
+# Coc configuration directory
+.vim
 
 ### VisualStudioCode ###
 .vscode/*
