--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist.zip
 
 .devcontainer/
 dist/
+inter/
 temp/
 
 # Created by https://www.gitignore.io/api/windows,macos,linux,jetbrains,visualstudiocode,emacs,vim,node
@@ -270,8 +271,16 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# react / gatsby 
-# public/
+# rollup.js default build output
+
+# Uncomment the public line if your project uses Gatsby
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# https://create-react-app.dev/docs/using-the-public-folder/#docsNav
+# public
+
+# Storybook build outputs
+.out
+.storybook-out
 
 # vuepress build output
 .vuepress/dist
@@ -284,6 +293,10 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+# Temporary folders
+tmp/
+temp/
 
 ### Vim ###
 # Swap
@@ -299,10 +312,15 @@ Sessionx.vim
 
 # Temporary
 .netrwhist
+
 # Auto-generated tag files
 tags
+
 # Persistent undo
 [._]*.un~
+
+# Coc configuration directory
+.vim
 
 ### VisualStudioCode ###
 .vscode/*
