--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,10 @@ indent_style = space
 indent_size = 4
 indent_style = space
 
+[*.sh]
+indent_size = 8
+indent_style = space
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
