--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "rollup-plugin-typescript2": "0.27.0",
     "semantic-release": "17.0.4",
     "semantic-release-chrome": "1.1.3",
-    "semantic-release-firefox": "exKAZUu/semantic-release-firefox",
+    "semantic-release-firefox-add-on": "0.2.5",
     "shx": "0.3.2",
     "sort-package-json": "1.41.0",
     "typescript": "3.8.3"
