--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -1,4 +1,4 @@
-name: Build and check code
+name: Check and build code
 
 on:
   pull_request:
@@ -7,7 +7,7 @@ on:
       - master
 
 jobs:
-  deploy-production:
+  check-and-build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,3 +33,4 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true'
       - run: yarn typecheck
       - run: yarn lint
+      - run: yarn build
