--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
         if: steps.yarn-cache.outputs.cache-hit != 'true'
+      - run: ls -la .
+      - run: ls -la node_modules
       - run: ls -la node_modules/@types
       - run: yarn typecheck
       - run: yarn lint
