--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -29,12 +29,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-      - run: ls -la .
-      - run: ls -la node_modules
-      - run: ls -la node_modules/@types
+      - run: yarn install --frozen-lockfile
       - run: yarn typecheck
       - run: yarn lint
       - run: yarn build
