--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Generate dot env
+        run: |
+          echo '${{ secrets.DOT_ENV }}' > .env
       - name: Show environment information
         run: |
           echo "node: $(node -v)"
