--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,4 +1,4 @@
-name: Deploy production
+name: Release plug-in
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - release
 
 jobs:
-  deploy-production:
+  semantic-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,8 +14,25 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Generate dot env
+        run: |
+          echo '${{ secrets.DOT_ENV }}' > .env
       - name: Show environment information
         run: |
           echo "node: $(node -v)"
           echo "yarn: $(yarn -v)"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: yarn install --frozen-lockfile
+      - run: yarn typecheck
+      - run: yarn lint
+      - run: yarn build
+      - run: yarn release
