--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "zlib.es": "0.6.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "11.1.0",
+    "@rollup/plugin-node-resolve": "7.1.3",
     "@types/chrome": "0.0.104",
     "@types/jquery": "3.3.34",
     "@typescript-eslint/eslint-plugin": "2.27.0",
@@ -54,8 +56,6 @@
     "prettier": "2.0.4",
     "rollup": "2.6.0",
     "rollup-plugin-closure-compile": "1.1.0",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-typescript2": "0.27.0",
     "semantic-release": "17.0.4",
     "semantic-release-chrome": "1.1.3",
