chore: fix semantic-release-firefox-add-on settings

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,7 @@
     [
       "semantic-release-firefox-add-on",
       {
-        "extensionId": "plantuml-visualizer",
+        "extensionId": "plantuml-visualizer@willbooster.com",
         "targetXpi": "dist.xpi"
       }
     ],
