build: employ babel instead of tsc

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
-  "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production yarn build-common",
     "build-common": "yarn recreate-dist && rollup -c",
@@ -35,6 +34,15 @@
     "zlib.es": "0.6.0"
   },
   "devDependencies": {
+    "@ampproject/rollup-plugin-closure-compiler": "0.25.2",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "7.9.0",
+    "@babel/preset-env": "7.9.5",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
+    "@rollup/plugin-babel": "5.0.0",
     "@rollup/plugin-commonjs": "11.1.0",
     "@rollup/plugin-node-resolve": "7.1.3",
     "@types/chrome": "0.0.104",
@@ -44,6 +52,7 @@
     "@willbooster/eslint-config-ts": "3.0.0",
     "@willbooster/prettier-config": "3.0.0",
     "@willbooster/renovate-config": "3.0.0",
+    "babel-plugin-transform-remove-console": "6.9.4",
     "bestzip": "2.1.5",
     "cross-env": "7.0.2",
     "dotenv-cli": "3.1.0",
@@ -55,8 +64,6 @@
     "lint-staged": "10.1.3",
     "prettier": "2.0.4",
     "rollup": "2.6.0",
-    "rollup-plugin-closure-compile": "1.1.0",
-    "rollup-plugin-typescript2": "0.27.0",
     "semantic-release": "17.0.4",
     "semantic-release-chrome": "1.1.3",
     "semantic-release-firefox-add-on": "0.2.5",
