--- a/babel.config.json
+++ b/babel.config.json
@@ -5,8 +5,7 @@
       {
         "useBuiltIns": "usage",
         "corejs": {
-          "version": "3.6",
-          "proposals": true
+          "version": "3.6"
         }
       }
     ],
