--- a/babel.config.json
+++ b/babel.config.json
@@ -1,16 +1,5 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "useBuiltIns": "usage",
-        "corejs": {
-          "version": "3.6"
-        }
-      }
-    ],
-    "@babel/typescript"
-  ],
+  "presets": ["@babel/preset-env", "@babel/typescript"],
   "plugins": ["@babel/proposal-class-properties", "@babel/proposal-numeric-separator"],
   "env": {
     "production": {
