--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,8 @@
       "semantic-release-firefox-add-on",
       {
         "extensionId": "{d324f64b-b423-4c2b-a9b4-d415705c26a9}",
-        "targetXpi": "dist.xpi"
+        "targetXpi": "dist.xpi",
+        "channel": "listed"
       }
     ],
     [
