build: refine settings for GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,11 @@
-name: Check and build code
+name: Test code
 
 on:
   pull_request:
   push:
     branches:
       - master
+      - renovate/**
 
 jobs:
   check-and-build:
