ci: refine triggers of GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,18 @@ name: Test code
 
 on:
   pull_request:
+    branches:
+      - '!renovate/**'
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
   push:
     branches:
-      - master
-      - renovate/**
+      - 'master'
+      - 'renovate/**'
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
 
 jobs:
   check-and-build:
