--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test code
+name: Test
 
 on:
   pull_request:
@@ -16,7 +16,7 @@ on:
       - '**.md'
 
 jobs:
-  check-and-build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
