--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,9 @@ on:
     branches:
       - '**'
       - '!renovate/**'
-    paths-ignore:
-      - 'docs/**'
-      - '**.md'
   push:
     branches:
-      - 'master'
+      - 'main'
       - 'renovate/**'
     paths-ignore:
       - 'docs/**'
@@ -33,10 +30,9 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v2
-        id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
       - run: yarn install --frozen-lockfile
