build(release): refactor settings

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,7 @@
         "npmPublish": false
       }
     ],
-    ["@semantic-release/github"],
+    "@semantic-release/github",
     [
       "semantic-release-firefox-add-on",
       {
