--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,19 @@
 {
-  "typescript.tsdk": "./frontend/node_modules/typescript/lib",
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "eslint.packageManager": "yarn",
+  "[typescript]": {
+    "editor.rulers": [120],
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.rulers": [120],
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
-  }
+  },
+  "editor.formatOnSave": true,
+  "githubPullRequests.defaultMergeMethod": "squash",
+  "plantuml.render": "PlantUMLServer",
+  "plantuml.server": "https://willbooster-plantuml.herokuapp.com/"
 }
