--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "build-dev": "cross-env NODE_ENV=development yarn build-common",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettier",
-    "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,svelte,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
-    "recreate-dist": "shx rm -Rf dist && shx mkdir dist && shx cp -r src/popup.html icon manifest.json dist/",
+    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,svelte,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
+    "recreate-dist": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
     "release": "dotenv -- semantic-release",
     "release-test": "yarn release -d",
     "start": "cross-env NODE_ENV=development yarn build-common -w",
@@ -61,15 +61,20 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-svelte3": "3.1.2",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
+    "prettier-plugin-svelte": "2.2.0",
     "rollup": "2.39.0",
+    "rollup-plugin-svelte": "7.1.0",
     "semantic-release": "17.3.9",
     "semantic-release-chrome": "1.1.3",
     "semantic-release-firefox-add-on": "0.2.8",
     "shx": "0.3.3",
     "sort-package-json": "1.49.0",
+    "svelte": "3.35.0",
+    "svelte-preprocess": "4.6.9",
     "typescript": "4.1.5"
   }
 }
