--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,8 @@
     "sourceMap": true,
     "importHelpers": false,
     "outDir": "dist",
-    "typeRoots": ["./node_modules/@types", "./@types"],
     "target": "esnext",
     "module": "esnext"
   },
-  "include": ["src/**/*", "__tests__/**/*", "packages/*/src/**/*", "packages/*/__tests__/**/*"]
+  "include": ["src/**/*", "__tests__/**/*", "./node_modules/@types", "./@types"]
 }
