--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@master
         with:
+          cancel_others: true
+          skip_after_successful_duplicate: true
           concurrent_skipping: always
           paths_ignore: '["**/*.md", "**/docs/**"]'
   test:
@@ -37,16 +39,13 @@ jobs:
         run: |
           echo "node: $(node -v)"
           echo "yarn: $(yarn -v)"
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v2
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          path: .yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - run: yarn install --frozen-lockfile
+      - run: yarn install
       - run: yarn typecheck
       - run: yarn lint
       - run: yarn build
