--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*/*", "http://*/*", "file:///*/*", "*://*/*"],
+      "matches": ["https://*/*", "http://*/*", "file:///*/*"],
       "js": ["content_scripts.js"]
     }
   ]
