feat: support any <pre> tag which has @startuml and @enduml (#561)
Co-authored-by: Kumachan <y.s11nov@fuji.waseda.jp>
Co-authored-by: Sakamoto, Kazunori <exKAZUu@users.noreply.github.com>

--- a/manifest.json
+++ b/manifest.json
@@ -18,17 +18,7 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://github.com/*",
-        "*://*/*.pu*",
-        "*://*/*.puml*",
-        "*://*/*.plantuml*",
-        "*://*/*.wsd*",
-        "file:///*/*.pu*",
-        "file:///*/*.puml*",
-        "file:///*/*.plantuml*",
-        "file:///*/*.wsd*"
-      ],
+      "matches": ["https://*/*", "http://*/*", "file:///*/*"],
       "js": ["content_scripts.js"]
     }
   ]
