--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "18.0.0",
     "@rollup/plugin-node-resolve": "11.2.1",
+    "@tsconfig/svelte": "1.0.10",
     "@types/chrome": "0.0.133",
     "@types/jquery": "3.5.5",
     "@typescript-eslint/eslint-plugin": "4.20.0",
