--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tsconfig/svelte": "1.0.10",
     "@types/chrome": "0.0.133",
     "@types/jquery": "3.5.5",
+    "@types/sass": "1.16.0",
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
     "@willbooster/eslint-config-ts": "6.2.1",
@@ -69,6 +70,7 @@
     "prettier-plugin-svelte": "2.2.0",
     "rollup": "2.44.0",
     "rollup-plugin-svelte": "7.1.0",
+    "sass": "1.32.8",
     "semantic-release": "17.4.2",
     "semantic-release-chrome": "1.1.3",
     "semantic-release-firefox-add-on": "0.2.8",
