refactor: rewrite popup using svelte (#556)
Co-authored-by: remin <rdrgn@users.noreply.github.com>
Co-authored-by: Sakamoto, Kazunori <exKAZUu@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "build-dev": "cross-env NODE_ENV=development yarn build-common",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettier",
-    "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,svelte,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "package": "rm -f \"*.tgz\" \"*.zip\" && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
+    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,svelte,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "recreate-dist": "rm -Rf dist && mkdir dist && cp -r src/popup.html icon manifest.json dist/",
     "release": "dotenv -- semantic-release",
     "release-test": "yarn release -d",
@@ -46,8 +46,10 @@
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "18.0.0",
     "@rollup/plugin-node-resolve": "11.2.1",
+    "@tsconfig/svelte": "1.0.10",
     "@types/chrome": "0.0.133",
     "@types/jquery": "3.5.5",
+    "@types/sass": "1.16.0",
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
     "@willbooster/eslint-config-ts": "6.2.1",
@@ -61,14 +63,20 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-svelte3": "3.1.2",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
+    "prettier-plugin-svelte": "2.2.0",
     "rollup": "2.44.0",
+    "rollup-plugin-svelte": "7.1.0",
+    "sass": "1.32.8",
     "semantic-release": "17.4.2",
     "semantic-release-chrome": "1.1.3",
     "semantic-release-firefox-add-on": "0.2.8",
     "sort-package-json": "1.49.0",
+    "svelte": "3.35.0",
+    "svelte-preprocess": "4.6.9",
     "typescript": "4.2.3"
   }
 }
