chore: willboosterify this repo

--- a/.gitignore
+++ b/.gitignore
@@ -205,8 +205,10 @@ fabric.properties
 
 ### VisualStudioCode ###
 .vscode/*
+!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
 
 ### VisualStudioCode Patch ###
