--- a/.prettierignore
+++ b/.prettierignore
@@ -216,8 +216,10 @@ fabric.properties
 
 ### VisualStudioCode ###
 .vscode/*
+!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
 
 ### VisualStudioCode Patch ###
