--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "@rollup/plugin-node-resolve": "13.0.0",
     "@tsconfig/svelte": "1.0.10",
     "@types/chrome": "0.0.133",
-    "@types/eslint": "^7",
+    "@types/eslint": "7",
     "@types/jquery": "3.5.5",
-    "@types/micromatch": "^4",
+    "@types/micromatch": "4",
     "@types/sass": "1.16.0",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@typescript-eslint/eslint-plugin": "4.24.0",
+    "@typescript-eslint/parser": "4.24.0",
     "@willbooster/eslint-config-ts": "6.3.0",
     "@willbooster/prettier-config": "6.2.1",
     "@willbooster/renovate-config": "6.3.0",
