chore: willboosterify this repo (#585)

--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "build-common": "yarn recreate-dist && rollup -c",
     "build-dev": "cross-env NODE_ENV=development yarn build-common",
     "cleanup": "yarn format && yarn lint-fix",
-    "format": "sort-package-json && yarn prettier",
-    "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,svelte,ts,tsx}\"",
+    "format": "sort-package-json && yarn prettify",
+    "lint": "eslint --color \"./{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "package": "rm -f \"*.tgz\" \"*.zip\" && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,svelte,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "recreate-dist": "rm -Rf dist && mkdir dist && cp -r src/popup.html icon manifest.json dist/",
     "release": "dotenv -- semantic-release",
     "release-test": "yarn release -d",
     "start": "cross-env NODE_ENV=development yarn build-common -w",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit --Pretty",
+    "postinstall": "husky install",
+    "prettify": "prettier --color --write \"**/{.*/,}*.{css,htm,html,js,json,json5,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\""
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
@@ -48,25 +49,29 @@
     "@rollup/plugin-node-resolve": "13.0.0",
     "@tsconfig/svelte": "1.0.10",
     "@types/chrome": "0.0.133",
+    "@types/eslint": "7",
     "@types/jquery": "3.5.5",
+    "@types/micromatch": "4",
     "@types/sass": "1.16.0",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
-    "@willbooster/eslint-config-ts": "6.2.1",
+    "@typescript-eslint/eslint-plugin": "4.24.0",
+    "@typescript-eslint/parser": "4.24.0",
+    "@willbooster/eslint-config-ts": "6.3.0",
     "@willbooster/prettier-config": "6.2.1",
-    "@willbooster/renovate-config": "6.2.1",
+    "@willbooster/renovate-config": "6.3.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "bestzip": "2.2.0",
     "cross-env": "7.0.3",
     "dotenv-cli": "4.0.0",
-    "eslint": "7.23.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint": "7.26.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-node": "0.3.4",
+    "eslint-plugin-import": "2.23.2",
     "eslint-plugin-svelte3": "3.1.2",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.4",
-    "prettier": "2.2.1",
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
+    "micromatch": "4.0.4",
+    "pinst": "2.1.6",
+    "prettier": "2.3.0",
     "prettier-plugin-svelte": "2.2.0",
     "rollup": "2.44.0",
     "rollup-plugin-svelte": "7.1.0",
@@ -74,9 +79,9 @@
     "semantic-release": "17.4.2",
     "semantic-release-chrome": "1.1.3",
     "semantic-release-firefox-add-on": "0.2.8",
-    "sort-package-json": "1.49.0",
+    "sort-package-json": "1.50.0",
     "svelte": "3.35.0",
     "svelte-preprocess": "4.6.9",
-    "typescript": "4.2.3"
+    "typescript": "4.2.4"
   }
 }
