--- a/manifest.json
+++ b/manifest.json
@@ -18,13 +18,7 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://github.com/*",
-        "https://raw.githubusercontent.com/*",
-        "https://gitlab.com/*",
-        "https://gist.github.com/*",
-        "file:///*/*"
-      ],
+      "matches": ["https://*/*", "http://*/*", "file:///*/*"],
       "js": ["content_scripts.js"]
     }
   ]
