--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,9 @@
 defaultSemverRangePrefix: ''
+
 nodeLinker: node-modules
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: '@yarnpkg/plugin-typescript'
-yarnPath: .yarn/releases/yarn-2.4.1.cjs
+
+yarnPath: .yarn/releases/yarn-3.0.0-rc.5.cjs
