--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,5 @@
 {
-  "branches": ["release"],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
@@ -7,7 +7,7 @@
       "@semantic-release/npm",
       {
         "npmPublish": false,
-        "successComment": false
+        "successComment": true
       }
     ],
     "@semantic-release/github",
