--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "semantic-release-firefox-add-on": "0.2.8",
     "sort-package-json": "1.50.0",
     "svelte": "3.38.2",
+    "svelte-check": "2.2.4",
     "svelte-preprocess": "4.7.3",
     "typescript": "4.3.2"
   }
