--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@master
         with:
-          cancel_others: true
+          cancel_others: false
           skip_after_successful_duplicate: true
-          concurrent_skipping: always
+          concurrent_skipping: same_content_newer
           paths_ignore: '["**/*.md", "**/docs/**"]'
   test:
     needs: pre
