chore: willboosterify this repo

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
-    "lint": "eslint --color \"./{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint --color \"./{src,__tests__}/**/*.{cjs,js,jsx,mjs,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "package": "rm -f \"*.tgz\" \"*.zip\" && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettify": "prettier --color --write \"**/{.*/,}*.{css,htm,html,js,json,json5,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
+    "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "recreate-dist": "rm -Rf dist && mkdir dist && cp -r src/popup.html icon manifest.json dist/",
     "release": "dotenv -- semantic-release",
     "release-test": "yarn release -d",
@@ -52,17 +52,17 @@
     "@types/eslint": "8.2.0",
     "@types/jquery": "3.5.8",
     "@types/micromatch": "4.0.2",
-    "@types/sass": "1.43.0",
+    "@types/sass": "1.16.1",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
-    "@willbooster/eslint-config-ts": "6.4.2",
-    "@willbooster/prettier-config": "6.4.0",
-    "@willbooster/renovate-config": "6.4.2",
+    "@willbooster/eslint-config-ts": "6.5.0",
+    "@willbooster/prettier-config": "6.5.0",
+    "@willbooster/renovate-config": "6.5.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "bestzip": "2.2.0",
     "cross-env": "7.0.3",
     "dotenv-cli": "4.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.3.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-node": "0.3.6",
     "eslint-plugin-import": "2.25.3",
@@ -85,5 +85,5 @@
     "svelte-preprocess": "4.9.8",
     "typescript": "4.5.2"
   },
-  "packageManager": "yarn@3.1.0"
+  "packageManager": "yarn@3.2.0-rc.5"
 }
