chore: willboosterify this repo

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,11 +1,13 @@
-defaultSemverRangePrefix: ""
+defaultSemverRangePrefix: ''
+
+nmMode: hardlinks-global
 
 nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
+    spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/plugin-auto-install.cjs
-    spec: "https://raw.githubusercontent.com/WillBooster/yarn-plugin-auto-install/main/dist/index.cjs"
+    spec: 'https://raw.githubusercontent.com/WillBooster/yarn-plugin-auto-install/main/dist/index.cjs'
 
 yarnPath: .yarn/releases/yarn-3.2.0-rc.5.cjs
